--- a/config/locales/po/bg/api.po
+++ b/config/locales/po/bg/api.po
@@ -52,8 +52,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-05-07 20:04+0000\n"
+"Last-Translator: fluxa <fluxaa@gmail.com>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/projects/p/yv-backend/language/bg/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
