--- a/config/locales/po/cs/api.po
+++ b/config/locales/po/cs/api.po
@@ -15,8 +15,9 @@
 # Translators:
 # Translators:
 # marek.lisy <marek.lisy@centrum.cz>, 2014
+# marek.lisy <marek.lisy@centrum.cz>, 2014
 # markywashy <iamcrazyketa@yahoo.com>, 2014
-# liveguard <youversion@jezkovi.com>, 2013
+# liveguard <youversion@jezkovi.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
@@ -25,6 +26,7 @@
 # Aszturc <adam.szturc@gmail.com>, 2014
 # marek.lisy <marek.lisy@centrum.cz>, 2013
 # marek.lisy <marek.lisy@centrum.cz>, 2013
+# marek.lisy <marek.lisy@centrum.cz>, 2014
 # Milan Kramoliš <timdruhym@gmail.com>, 2013
 # Milan Kramoliš <timdruhym@gmail.com>, 2013
 # Radek Ćmiel <radek@element.cx>, 2013
@@ -35,8 +37,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-10 07:22+0000\n"
-"Last-Translator: Radek Ćmiel <radek@element.cx>\n"
+"PO-Revision-Date: 2014-05-20 18:23+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/yv-backend/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,8 +49,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-22 10:00+0000\n"
-"Last-Translator: markywashy <iamcrazyketa@yahoo.com>\n"
+"PO-Revision-Date: 2014-05-20 21:04+0000\n"
+"Last-Translator: liveguard <youversion@jezkovi.com>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/yv-backend/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,8 +61,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-27 19:41+0000\n"
-"Last-Translator: Aszturc <adam.szturc@gmail.com>\n"
+"PO-Revision-Date: 2014-05-08 08:50+0000\n"
+"Last-Translator: marek.lisy <marek.lisy@centrum.cz>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/yv-backend/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -137,6 +139,9 @@ msgstr "{name} shlédl <b>{title}</b>"
 msgid "moment.video.watched.self.title"
 msgstr "Shlédli jste <b>{title}</b>"
 
+msgid "moment.system.find_friends.title"
+msgstr "Aplikace Bible je s přáteli ještě lepší. Prohledejte vaše kontakty a přidejte si své přátele."
+
 msgid "notifications.friendships.offer"
 msgstr "{name} se chce stát vaším přítelem na YouVersion"
 
@@ -155,23 +160,41 @@ msgstr "{name} přidal komentář k vaší záložce: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} přidal komentář k vašemu zvýraznění: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} přidal komentář k vašemu plánu: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} komentoval váš plán čtení Bible: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} přidal komentář k vašemu novému přátelství s {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} přidal komentář k vaší poznámce: “{comment}”"
 
 msgid "notifications.likes.moment.mine.bookmark"
-msgstr "{name} se líbí vaše záložka, {reference_human}"
+msgstr "Uživateli {name} se líbí vaše záložka, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
-msgstr "{name} se líbí vaše označení, {reference_human}"
+msgstr "Uživateli {name} se líbí vaše označení, {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} se líbí váš pokrok plánu"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} se líbí pokrok čtení Bible"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} se líbí vaše nové přátelství s {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
-msgstr "{name} se líbí vaše poznámka na {reference_human}"
+msgstr "Uživateli {name} se líbí vaše poznámka na {reference_human}"
 
 msgid "notifications.likes.moment.mine.note.title"
-msgstr "{name} se líbí vaše poznámka, “{title}”"
+msgstr "Uživateli {name} se líbí vaše poznámka, “{title}”"
 
 msgid "notifications.likes.moment.mine.note.no_title_no_reference"
-msgstr "{name} se líbí vaše poznámka"
+msgstr "Uživateli {name} se líbí vaše poznámka"
 
 msgid "notifications.comments.moments.friend.owner.bookmark"
 msgstr "{moment_owner_name} také okomentoval svoji záložku: “{comment}”"
@@ -179,11 +202,29 @@ msgstr "{moment_owner_name} také okomentoval svoji záložku: “{comment}”"
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} také okomentoval záložku uživatele {moment_owner_name}: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} také přidal komentář k přátelství s {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} také přidal komentář k {moment_owner_name} novému přátelství s {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} také okomentoval svoje zvýraznění: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} také okomentoval zvýraznění uživatele {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} také komentoval plán čtení: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} také komentoval plán {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} také komentoval plán čtení Bible: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} také komentoval {moment_owner_name} plán čtení Bible: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} také okomentoval svoji poznámku: “{comment}”"
@@ -206,6 +247,18 @@ msgstr "{name} přidal poznámku “{title}”"
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} přidal poznámku"
 
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} začal nový plán, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} začal nový plán čtení Bible, {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} dokončil plán čtení, {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} dokončil plán čtení Bible, {title}"
+
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
 msgid_plural "You have %d friend requests"
@@ -217,17 +270,17 @@ msgid "notifications.system.test"
 msgstr "Stáhněte si aplikaci Kids Bible App právě teď!!!"
 
 msgid "share.invite_sms_prefix"
-msgstr "Od {name}:"
+msgstr "Od uživatele {name}:"
 
 msgid "share.invite_sms"
-msgstr "Už máš aplikaci Bible od YouVersion? Mě se moc líbí a myslím si, že by se líbila i Tobě. Tady je odkaz:"
+msgstr "Už máš aplikaci Bible od YouVersion? Mě se moc líbí a myslím si, že by se mohla líbit i Tobě. Tady je odkaz:"
 
 msgid "share.invite_email_subject"
-msgstr "Máte už aplikaci Bible?"
+msgstr "Máš už aplikaci Bible?"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Velice se mi líbí aplikace Bible od YouVersion a myslím si, že by se líbila i Tobě. Otevírám teď Bibli mnohem častěji, protože číst si ji, dívat se na videa, poslouchat ji a sdílet ji je velice jednoduché. Obsahuje dokonce i Plány, které mají vybrané pasáže Bible a čekají na přečtení každý den.\n"
+"Hodně se mi líbí aplikace Bible od YouVersion a myslím si, že by se mohla líbit i tobě. Otevírám teď Bibli mnohem častěji, protože je teď snadné si ji číst, dívat se na videa, poslouchat ji i sdílet. Obsahuje dokonce i Plány čtení, které mají vybrané pasáže Bible a čekají na přečtení každý den.\n"
 "\n"
 "Můžeš si ji také stáhnout (zdarma!) do téměř jakéhokoliv mobilního zařízení:"
 
