--- a/config/locales/po/es/api.po
+++ b/config/locales/po/es/api.po
@@ -5,8 +5,10 @@
 # Translators:
 # Translators:
 # myleju, 2014
-# FedericoLarriva <federicolarriva@hotmail.com>, 2013
+# Carlos Orjuela <carlos.orjuelaz@gmail.com>, 2014
+# FedericoLarriva <federicolarriva@hotmail.com>, 2013-2014
 # JessicaO <jessi1205@gmail.com>, 2013
+# samararios19 <sammyl12@hotmail.com>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -31,8 +33,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-09 22:12+0000\n"
-"Last-Translator: myleju\n"
+"PO-Revision-Date: 2014-05-21 14:22+0000\n"
+"Last-Translator: samararios19 <sammyl12@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/yv-backend/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -107,7 +109,7 @@ msgid "moment.plan_subscription.self.title"
 msgstr "Ha iniciado un plan"
 
 msgid "moment.plan_segment_completion.title"
-msgstr "{name} día completado <b>{segment}</b> del plan, <b>{title}</b>"
+msgstr "{name} ha completado el día <b>{segment}</b> del plan, <b>{title}</b>"
 
 msgid "moment.plan_segment_completion.self.title"
 msgstr "Ha completado el día <b>{segment}</b> del plan, <b>{title}</b>"
@@ -116,7 +118,7 @@ msgid "moment.plan_segment_completion.body"
 msgstr "Día {segment} de {total_segments} ({percent_complete}%)"
 
 msgid "moment.plan_completion.title"
-msgstr "{name} ha completado un plan"
+msgstr "{name} completó un plan"
 
 msgid "moment.plan_completion.self.title"
 msgstr "Ha completado un plan"
@@ -132,6 +134,9 @@ msgstr "{name} vio <b>{title}</b>"
 
 msgid "moment.video.watched.self.title"
 msgstr "Usted vio <b>{title}</b>"
+
+msgid "moment.system.find_friends.title"
+msgstr "La Biblia App es aún mejor con Amigos. Busque en sus Contactos para encontrar Amigos."
 
 msgid "notifications.friendships.offer"
 msgstr "{name} quiere ser su amigo en YouVersion"
