--- a/config/locales/po/es_ES/api.po
+++ b/config/locales/po/es_ES/api.po
@@ -31,8 +31,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-05 16:58+0000\n"
-"Last-Translator: meralemar <meralemar@gmail.com>\n"
+"PO-Revision-Date: 2014-05-20 18:23+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/yv-backend/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,8 +43,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-22 18:19+0000\n"
-"Last-Translator: DavidEsteve <david.drummer.93@gmail.com>\n"
+"PO-Revision-Date: 2014-05-20 19:52+0000\n"
+"Last-Translator: ordaks <manuelordax@me.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/yv-backend/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -133,6 +133,9 @@ msgstr "{name} vió <b>{title}</b>"
 msgid "moment.video.watched.self.title"
 msgstr "Viste <b>{title}</b>"
 
+msgid "moment.system.find_friends.title"
+msgstr "La Biblia App es mejor con amigos. Busca en tus contactos para encontrar amigos."
+
 msgid "notifications.friendships.offer"
 msgstr "{name}  quiere ser tu amigo en YouVersion "
 
@@ -151,6 +154,15 @@ msgstr "{name} comentó sobre tu marcador: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} comentó sobre lo destacado: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} comentó sobre tu Plan de lectura: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} comentó sobre tu plan de lectura de la Biblia: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} comentó sobre vuestra nueva amistad con {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} comentó sobre tu nota: “{comment}”"
 
@@ -159,6 +171,15 @@ msgstr "{name} le gusta tu marcador, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} le gusta tu destacado, {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} le gusta la actividad de tu plan de lectura"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} le gusta la actividad de tu plan de lectura bíblica"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} le gusta tu nueva amistad con {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} le gusta tu nota en {reference_human}"
@@ -175,11 +196,29 @@ msgstr "{moment_owner_name} también comentó sobre tu marcador: “{comment}”
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} también comentó sobre el marcador de {moment_owner_name}: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} también comentó sobre su nueva amistad con {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} también comentó sobre la nueva amistad de {moment_owner_name} con {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} también comentó sobre su destacado: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} también comentó sobre el destacado de {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} también comentó sobre su plan de lectura: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} también comentó sobre el plan de lectura {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} también comentó sobre su plan de lectura bíblica: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} también comentó sobre el plan de lectura bíblica {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} también comentó sobre su nota: “{comment}”"
@@ -201,6 +240,18 @@ msgstr "{name} añadió una nota, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} añadió una nota"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} comenzó un nuevo plan de lectura, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} comenzó un nuevo plan de lectura bíblica, {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} finalizó su plan de lectura, {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} finalizó su plan de lectura bíblica, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
