--- a/config/locales/po/hu/api.po
+++ b/config/locales/po/hu/api.po
@@ -16,6 +16,8 @@
 # Translators:
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
+# Csaba Sóti, 2014
+# IlonaKoncz <konczica@gmail.com>, 2014
 # lohnszabolcs <lohnszabolcs+transifex@gmail.com>, 2013-2014
 # mississippi44 <petrik.hermina@gmail.com>, 2013
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
@@ -48,8 +50,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-16 13:16+0000\n"
-"Last-Translator: Gabi Veres <vegbor1@gmail.com>\n"
+"PO-Revision-Date: 2014-05-21 07:22+0000\n"
+"Last-Translator: Csaba Sóti\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/yv-backend/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -156,6 +158,15 @@ msgstr "{name} hozzászólt a könyvjelződhöz: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} hozzászólt a kiemelésedhez: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} megjegyzést fűzött a tervedhez: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name}megjegyzést fűzött a Biblia tervedhez: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} megjegyzést fűzött az új barátságodhoz a következővel {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} hozzászólt a jegyzetedhez: “{comment}”"
 
@@ -164,6 +175,15 @@ msgstr "{name} kedveli a könyvjelződ: {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} kedveli a kiemelésed: {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} kedveli aktivításod a terveddel"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} kedveli aktivításod a Biblia terveddel"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} kedveli a barátságodat a következővel {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} kedveli a {reference_human}-hez fűzött jegyzeted"
@@ -180,11 +200,29 @@ msgstr "{moment_owner_name} szintén hozzászólt a könyvjelzőjéhez: “{comm
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} szintén hozzászólt {moment_owner_name} könyvjelzőjéhez: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} is megjegyzést fűztött új barátságukhoz a következővel {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} is fűzött megjegyzést a {moment_owner_name} új barátságához a következővel {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} szintén hozzászólt a kiemeléséhez: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} szintén hozzászólt {moment_owner_name} kiemeléséhez: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} is fűzött megjegyzést a terveikhez: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name}  is fűzött megjegyzést a {moment_owner_name} tervéhez: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} is megjegyzést fűzött a Biblia tervükhöz: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} is fűzött megjegyzést {moment_owner_name} Biblia tervéhez: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} szintén hozzászólt a jegyzetéhez: “{comment}”"
@@ -206,6 +244,18 @@ msgstr "{name} jegyzetelt, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} jegyzetelt"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} elkezdett egy új tervet: {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} elkezdett egy új Biblia tervet: {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} befejezték a tervüket: {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} befejezték a tervüket: {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
