--- a/config/locales/po/ko/api.po
+++ b/config/locales/po/ko/api.po
@@ -15,7 +15,9 @@
 # Translators:
 # chrisvaughn <chris.vaughn@lifechurch.tv>, 2014
 # Ingu Kang <ingukang@gmail.com>, 2013-2014
+# Jason Park <jasonpark9462@gmail.com>, 2014
 # AllieCha <alliecha@gmail.com>, 2013
+# Sung Nam <sungheenam@gmail.com>, 2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
@@ -31,8 +33,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-10 17:00+0000\n"
-"Last-Translator: Ingu Kang <ingukang@gmail.com>\n"
+"PO-Revision-Date: 2014-05-23 16:41+0000\n"
+"Last-Translator: Sung Nam <sungheenam@gmail.com>\n"
 "Language-Team: Korean (http://www.transifex.com/projects/p/yv-backend/language/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,8 +45,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-09 00:50+0000\n"
-"Last-Translator: Ingu Kang <ingukang@gmail.com>\n"
+"PO-Revision-Date: 2014-05-23 20:22+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Korean (http://www.transifex.com/projects/p/yv-backend/language/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,67 +73,70 @@ msgid "moment.system.bible_series_promo.body"
 msgstr "오늘밤 <i>성경 시리즈</i>를 시청해 보세요!"
 
 msgid "moment.bookmark.title"
-msgstr "{name}님이 <b>{reference_human}</b> 책갈피를 표시했습니다."
+msgstr "{name}님이 <b>{reference_human}</b>에 책갈피를 표시했습니다."
 
 msgid "moment.bookmark.self.title"
-msgstr "회원님이 <b>{reference_human}</b> 책갈피를 표시했습니다."
+msgstr "<b>{reference_human}</b>에 책갈피를 표시 하셨습니다."
 
 msgid "moment.friendship.title"
 msgstr "{user_name}님의 새 친구입니다. <b>{friend_name}</b>"
 
 msgid "moment.friendship.self.title"
-msgstr "회원님은 이제<b>{friend_name}</b>님과 친구입니다"
+msgstr "이제 <b>{friend_name}</b>님과 친구입니다"
 
 msgid "moment.highlight.title"
-msgstr "{name}님이 <b>{reference_human}</b> 하일라이트를 했습니다."
+msgstr "{name}님이 <b>{reference_human}</b>에 하이라이트를 했습니다."
 
 msgid "moment.highlight.self.title"
-msgstr "회원님이 <b>{reference_human}</b> 하일라이트를 했습니다."
+msgstr "<b>{reference_human}</b>에 하이라이트 하셨습니다."
 
 msgid "moment.note.title"
 msgstr "{name}님이 <b>{title}</b> 노트를 추가했습니다."
 
 msgid "moment.note.self.title"
-msgstr "회원님이 <b>{title}</b> 노트를 추가했습니다."
+msgstr "<b>{title}</b> 노트를 추가 하셨습니다."
 
 msgid "moment.bible.download.title"
 msgstr "{name}님이 <b>{version}</b> 번역본을 다운로드했습니다."
 
 msgid "moment.bible.download.self.title"
-msgstr "회원님은 <b>{version}</b> 번역본을 다운로드했습니다."
+msgstr "<b>{version}</b> 번역본을 다운로드했습니다."
 
 msgid "moment.plan_subscription.title"
-msgstr "{name}님께서 묵상을 시작하셨습니다."
+msgstr "{name}님께서 묵상 계획을 시작하셨습니다."
 
 msgid "moment.plan_subscription.self.title"
 msgstr "묵상을 시작하셨습니다."
 
 msgid "moment.plan_segment_completion.title"
-msgstr "{name} 님은 묵상계획 <b>{title}</b>  <b>{segment}</b> 날 분을 완성했습니다"
+msgstr "{name}님이 <b>{title}</b> 묵상계획 중 <b>{segment}</b>일 째 읽기를 마쳤습니다."
 
 msgid "moment.plan_segment_completion.self.title"
-msgstr "묵상계획 <b>{title}</b>  <b>{segment}</b> 날 분을 완성했습니다"
+msgstr "<b>{title}</b> 묵상계획 중 <b>{segment}</b>일째 읽기를 마치셨습니다."
 
 msgid "moment.plan_segment_completion.body"
-msgstr "{total_segments}  중  {segment} 일 분 ({percent_complete}%)"
+msgstr "{total_segments}  중  {segment}일 분량 ({percent_complete}%)"
 
 msgid "moment.plan_completion.title"
-msgstr "{name} 님께서 계획을 완료하였습니다."
+msgstr "{name} 님께서 묵상 계획을 완료하였습니다."
 
 msgid "moment.plan_completion.self.title"
-msgstr "계획을 완료하셨습니다"
+msgstr "묵상 계획을 완료하셨습니다"
 
 msgid "moment.badge.earned.title"
-msgstr "{name}님이 <b>{title}</b> 배지를 획득했습니다 "
+msgstr "{name}님이 <b>{title}</b> 배지를 획득했습니다."
 
 msgid "moment.badge.earned.self.title"
-msgstr "<b>{title}</b> 배지를 획득하셨습니다"
+msgstr "<b>{title}</b> 배지를 획득하셨습니다."
 
 msgid "moment.video.watched.title"
-msgstr "{name}님이<b>{title}</b>을(를) 보았습니다"
+msgstr "{name}님이<b>{title}</b> 동영상을 보았습니다."
 
 msgid "moment.video.watched.self.title"
-msgstr "회원님이  <b>{title}</b>을(를) 보았습니다"
+msgstr "<b>{title}</b> 동영상을 보셨습니다."
+
+msgid "moment.system.find_friends.title"
+msgstr "친구기능을 추가함으로 성경 앱이 더 좋아졌습니다.  연락처를 통해서 친구들을 찾아보세요."
 
 msgid "notifications.friendships.offer"
 msgstr "{name}님이 회원님과 YouVersion 친구가 되고 싶어합니다."
@@ -151,6 +156,15 @@ msgstr "{name}님이 회원님의 책갈피에 댓글을 남겼습니다. :\"{co
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name}님이 회원님의 하이라이트에 댓글을 남겼습니다: \"{comment}\""
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name}님이 묵상 계획에 글을 남겼습니다: \"{comment}\""
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name}님이 당신의 성경읽기계획에 글을 남겼습니다: \"{comment}\""
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} 님이  {friend_name}님과 친구맺은 것에 대해서 글을 남겼습니다:   {comment}"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name}님이 회원님의 노트에 댓글을 남겼습니다: \"{comment}\""
 
@@ -159,6 +173,15 @@ msgstr "{name}님이 회원님의 {reference_human} 책갈피를 좋아합니다
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name}님이 회원님의 {reference_human} 하이라이트를 좋아합니다."
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name}님이 당신의 묵상 계획 활동을 좋아합니다."
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name}님이 당신의 성경읽기계획 활동을 좋아합니다."
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name}님이 {friend_name}님과 새로 친구 맺은 것을 좋아합니다."
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name}님이 회원님의 {reference_human} 노트를 좋아합니다."
@@ -175,11 +198,29 @@ msgstr "{moment_owner_name}님도  책갈피에 댓글을 남겼습니다:  \"{c
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name}님도 {moment_owner_name}님의 책갈피에 댓글을 남겼습니다: \"{comment}\""
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name}님도 {friend_name}님과 새로 친구 맺은 것에 대해서 글을 남겼습니다: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name}도 {moment_owner_name}이 {friend_name}과 새로 친구 맺은 것에 대하여 글을 남겼습니다: \"{comment}\""
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name}님도 하이라이트에 댓글을 남겼습니다: \"{comment}\""
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name}님도 {moment_owner_name}님의 하이라이트에 댓글을 남겼습니다: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name}님도 자신의 묵상 계획에 글을 남겼습니다: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name}님도 {moment_owner_name}님의 묵상 계획에 글을 남겼습니다: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name}님도 자신의 성경읽기계획에 글을 남겼습니다: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name}님도 {moment_owner_name}님의 성경읽기계획에 글을 남겼습니다: \"{comment}\""
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name}님도 노트에 댓글을 남겼습니다: \"{comment}\""
@@ -201,6 +242,18 @@ msgstr "{name}님이 \"{title}\" 노트를 추가했습니다."
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name}님이 노트를 추가했습니다."
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name}님이 {title} 새 묵상 계획을 시작하였습니다."
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name}님이 {title}이라는 새 성경 읽기계획을 시작하였습니다."
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name}님이 {title} 묵상 계획을 완료하였습니다."
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name}님이 {title} 성경읽기계획을 완료하였습니다."
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
