--- a/config/locales/po/mn/api.po
+++ b/config/locales/po/mn/api.po
@@ -3,8 +3,9 @@
 #
 # Translators:
 # Translators:
+# Translators:
 # Battuya Lkhagvadulam <tuyamuya@gmail.com>, 2013
-# chris ballinger <ballinger.chris@gmail.com>, 2013
+# chris ballinger <ballinger.chris@gmail.com>, 2013-2014
 # chrisvaughn <chris.vaughn@lifechurch.tv>, 2014
 # tugsuu <zagdaa_tugsuu@yahoo.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
@@ -31,8 +32,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-01 12:10+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-04-04 11:00+0000\n"
+"Last-Translator: chris ballinger <ballinger.chris@gmail.com>\n"
 "Language-Team: Mongolian (http://www.transifex.com/projects/p/yv-backend/language/mn/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,8 +56,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-03-05 13:20+0000\n"
+"Last-Translator: tugsuu <zagdaa_tugsuu@yahoo.com>\n"
 "Language-Team: Mongolian (http://www.transifex.com/projects/p/yv-backend/language/mn/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -100,23 +101,26 @@ msgstr "{name} хувилбарыг татаж авсан, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Таны татаж авсан хувилбар, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} эхлэсэн төлөвлөгөө, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} тѳлѳвлѳгѳѳ эхлсэн"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Таны эхлэсэн төлөвлөгөө, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Тѳлѳвлѳгѳѳг эхлсэн"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} дуусгасан өдөр <b>{day}</b> төлөвлөгөөний, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} дуусгасан өдөр <b>{segment}</b> төлөвлөгөөний, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Таны дуусгасан өдөр <b>{day}</b> төлөвлөгөөний, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Таны дуусгасан өдөр <b>{segment}</b> төлөвлөгөөний, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} төлөвлөгөөг дуусгасан, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Ѳдѳр {segment} -с {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Таны дуусгасан төлөвлөгөө, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} төлөвлөгөөг дуусгасан"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Tөлөвлөгөөг дуусгасан"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} хүртсэн <b>{title}</b> цол тэмдэг"
@@ -219,7 +223,7 @@ msgstr "Танд Библийн Апп байгаа юу?"
 
 msgid "share.invite_email_body"
 msgstr ""
-"YouVersion-ний Библи Апп надад таалагдаж байна, таньд ч гэсэн таалагдах байхаа. Сүүлийн үед Би Библи ѳдѳр бүр уншдаг болсон ягаад гэвэл унших, үзэх, сонсох, болон хуваахад их амархан болсон. Апп-д Унших Тѳлѳвлѳгѳѳнүүд ч байгаа, миний Библийн унших хэсгийг сонгоод ѳдѳр бүр бэлэн байдаг.\n"
+"YouVersion-ний Библи Апп надад таалагдаж байна, таньд ч гэсэн таалагдах байхаа. Сүүлийн үед Би Библи ѳдѳр бүр уншдаг болсон яагаад гэвэл унших, үзэх, сонсох, болон хуваахад их амархан болсон. Апп-д Унших Тѳлѳвлѳгѳѳнүүд ч байгаа, миний Библийн унших хэсгийг сонгоод ѳдѳр бүр бэлэн байдаг.\n"
 "\n"
 "Та зѳѳврийн хэрэгсэл дээрээ (үнэгүй!) эндээс татан авч болно:  "
 
@@ -230,7 +234,7 @@ msgid "share.invite_twitter_direct"
 msgstr "Танд @YouVersion -ны Библи Апп байгаа юу? Надад таалагдаж байна, таньд ч гэсэн таалагдах байхаа. Линк нь: "
 
 msgid "share.invite_facebook"
-msgstr "Би Библийн Апп-нд дуртай! Надад Библи ѳдѳр бүр уншихад үнэхээр тусладаг. Ишлэлүүд тодруулох, аудио Библи сонсох, тэмдэглэлүүд зохиох, уншлагын тѳлѳвлѳѳгѳѳгѳѳр унших...болон бичлэг үзэх боломжтой! Татан аваарай (үнэгүй байна). "
+msgstr "Би Библийн Апп-д дуртай! Надад Библи ѳдѳр бүр уншихад үнэхээр тусладаг. Ишлэлүүд тодруулох, аудио Библи сонсох, тэмдэглэлүүд бичих, уншлагын тѳлѳвлѳѳгѳѳгѳѳр унших...болон бичлэг үзэх боломжтой! Яг одоо татан аваарай (үнэгүй):"
 
 msgid "share.invite_facebook_direct"
 msgstr "Таньд Библи Апп байгаа юу? Надад таалагдаж байна, таньд ч гэсэн таалагдах байхаа. Линк нь: "
