--- a/config/locales/po/no/api.po
+++ b/config/locales/po/no/api.po
@@ -6,6 +6,7 @@
 # Translators:
 # Per Byrknes <pbyrknes@norea.no>, 2013
 # Terje Bøe <terje.boee@lyse.net>, 2013-2014
+# Toralf Liene <liene@pvv.org>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -31,8 +32,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-04 10:00+0000\n"
-"Last-Translator: Terje Bøe <terje.boee@lyse.net>\n"
+"PO-Revision-Date: 2014-05-23 22:21+0000\n"
+"Last-Translator: Toralf Liene <liene@pvv.org>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/yv-backend/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,7 +44,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-25 14:15+0000\n"
+"PO-Revision-Date: 2014-05-20 19:42+0000\n"
 "Last-Translator: Terje Bøe <terje.boee@lyse.net>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/yv-backend/language/no/)\n"
 "MIME-Version: 1.0\n"
@@ -133,6 +134,9 @@ msgstr "{name} så på <b>{title}</b>"
 msgid "moment.video.watched.self.title"
 msgstr "Du så på <b>{title}</b>"
 
+msgid "moment.system.find_friends.title"
+msgstr "Bibel-appen er bedre sammen med venner. Søk gjennom kontaktene for å finne venner."
+
 msgid "notifications.friendships.offer"
 msgstr "{name} ønsker å være din venn på YouVersion"
 
@@ -151,6 +155,15 @@ msgstr "{name} kommenterte bokmerket: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} kommenterte din markering: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} kommenterte din leseplan: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} kommenterte din bibelplan: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} kommenterte ditt nye vennskap med {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} kommenterte notatet: “{comment}”"
 
@@ -159,6 +172,15 @@ msgstr "{name} liker bokmerket ditt, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} liker markeringen din, {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} liker din leseplanaktivitet"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} liker din bibelplanaktivitet"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} liker ditt nye vennskap med {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} liker ditt notat på {reference_human}"
@@ -175,11 +197,29 @@ msgstr "{moment_owner_name} kommenterte også bokmerket: “{comment}”"
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} kommenterte også {moment_owner_name} sitt bokmerke: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} kommenterte også deres nye vennskap med {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} kommenterte også {moment_owner_name}s nye vennskap med {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} kommenterte også deres utheving: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} kommenterte også {moment_owner_name} sin utheving: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} kommenterte også på deres plan: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} kommenterte også {moment_owner_name}s leseplan: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} kommenterte også deres bibelplan: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} kommenterte også {moment_owner_name}s bibelplan: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} kommenterte også notatet deres: “{comment}”"
@@ -201,6 +241,18 @@ msgstr "{name} la til et notat, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} la til et notat"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} begynte på en ny leseplan, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} begynte på en ny bibelplan, {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} fullførte deres leseplan, {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} fullførte deres bibelplan, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
