--- a/config/locales/po/pl/api.po
+++ b/config/locales/po/pl/api.po
@@ -28,8 +28,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-09 10:51+0000\n"
-"Last-Translator: Oliwer C <oliwerc@gmail.com>\n"
+"PO-Revision-Date: 2014-05-20 20:22+0000\n"
+"Last-Translator: Sebastian Ferdyn <sferdyn@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/projects/p/yv-backend/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -129,6 +129,9 @@ msgstr "{name} oglądnął <b>{title}</b>"
 
 msgid "moment.video.watched.self.title"
 msgstr "Oglądnąłeś <b>{title}</b>"
+
+msgid "moment.system.find_friends.title"
+msgstr "Aplikacja Biblii jest jeszcze lepsza ze znajomymi. Przeszukaj kontakty, aby znaleźć znajomych."
 
 msgid "notifications.friendships.offer"
 msgstr "{name} chce być twoim znajomym w YouVersion"
