--- a/config/locales/po/pt/api.po
+++ b/config/locales/po/pt/api.po
@@ -5,8 +5,8 @@
 # Translators:
 # Translators:
 # alessandra.morello_ptBR <alessandramorello@yahoo.com.br>, 2013
-# Nizia Dantas <niziadantasyouversion@gmail.com>, 2013-2014
-# Nizia Dantas <niziadantasyouversion@gmail.com>, 2014
+# Nizia Dantas <nizia.dantas@gmail.com>, 2013-2014
+# Nizia Dantas <nizia.dantas@gmail.com>, 2014
 # Tetê <princesstt77@gmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -16,8 +16,8 @@
 # Translators:
 # alessandra.morello_ptBR <alessandramorello@yahoo.com.br>, 2013
 # Eric Allan dos Santos, 2014
-# Nizia Dantas <niziadantasyouversion@gmail.com>, 2013-2014
-# Nizia Dantas <niziadantasyouversion@gmail.com>, 2014
+# Nizia Dantas <nizia.dantas@gmail.com>, 2013-2014
+# Nizia Dantas <nizia.dantas@gmail.com>, 2014
 # Tetê <princesstt77@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
@@ -27,8 +27,8 @@
 # alessandra.morello_ptBR <alessandramorello@yahoo.com.br>, 2013
 # alessandra.morello_ptBR <alessandramorello@yahoo.com.br>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# Nizia Dantas <niziadantasyouversion@gmail.com>, 2014
-# Nizia Dantas <niziadantasyouversion@gmail.com>, 2014
+# Nizia Dantas <nizia.dantas@gmail.com>, 2014
+# Nizia Dantas <nizia.dantas@gmail.com>, 2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -36,8 +36,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-22 22:40+0000\n"
-"Last-Translator: Nizia Dantas <niziadantasyouversion@gmail.com>\n"
+"PO-Revision-Date: 2014-05-20 18:23+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Portuguese (http://www.transifex.com/projects/p/yv-backend/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,8 +48,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-13 21:40+0000\n"
-"Last-Translator: Nizia Dantas <niziadantasyouversion@gmail.com>\n"
+"PO-Revision-Date: 2014-05-20 20:32+0000\n"
+"Last-Translator: Nizia Dantas <nizia.dantas@gmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/projects/p/yv-backend/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +61,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
 "PO-Revision-Date: 2014-04-13 21:00+0000\n"
-"Last-Translator: Nizia Dantas <niziadantasyouversion@gmail.com>\n"
+"Last-Translator: Nizia Dantas <nizia.dantas@gmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/projects/p/yv-backend/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -138,6 +138,9 @@ msgstr "{name} assistiu <b>{title}</b>"
 msgid "moment.video.watched.self.title"
 msgstr "Você assistiu <b>{title}</b>"
 
+msgid "moment.system.find_friends.title"
+msgstr "O App da Bíblia é ainda melhor com Amigos. Procure seus Contatos para encontrar Amigos."
+
 msgid "notifications.friendships.offer"
 msgstr "{name} quer ser seu amigo no YouVersion"
 
@@ -156,6 +159,15 @@ msgstr "{name} comentou o seu marcador: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} comentou o seu destaque: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} comentou no seu Plano: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} comentou no seu Plano Bíblico: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} comentou a sua nova amizade com {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} comentou a sua anotação: “{comment}”"
 
@@ -164,6 +176,15 @@ msgstr "{name} curtiu seu marcador, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} curtiu seu destaque, {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} curtiu a atividade do seu Plano"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} curtiu a atividade do seu Plano Bíblico"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} curtiu sua nova amizade com {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} curtiu sua anotação em {reference_human}"
@@ -180,11 +201,29 @@ msgstr "{moment_owner_name} também comentou este marcador: “{comment}”"
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} também comentou o marcador de {moment_owner_name}: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} também comentou sua nova amizade com {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} também comentou na nova amizade de {moment_owner_name} com {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} também comentou este destaque: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} também comentou o destaque de {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} também comentou este Plano: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} também comentou no Plano de {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} também comentou este Plano Bíblico: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} também comentou no Plano Bíblico de {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} também comentou esta anotação: “{comment}”"
@@ -206,6 +245,18 @@ msgstr "{name} adicionou uma anotação, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} adicionou uma anotação"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} começou um novo Plano, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} começou um novo Plano Bíblico, {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} completou este Plano, {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} completou este Plano Bíblico, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
