--- a/config/locales/po/pt_PT/api.po
+++ b/config/locales/po/pt_PT/api.po
@@ -4,6 +4,7 @@
 # Translators:
 # Translators:
 # Translators:
+# bcarneiro <barbara@wordrevolution.com>, 2014
 # ptfigueira <ptfigueira@gmail.com>, 2014
 # BadMix <vitor.msilva@gmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
@@ -12,6 +13,7 @@
 # Translators:
 # Translators:
 # Translators:
+# bcarneiro <barbara@wordrevolution.com>, 2014
 # ptfigueira <ptfigueira@gmail.com>, 2014
 # BadMix <vitor.msilva@gmail.com>, 2013
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
@@ -33,8 +35,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-04 22:20+0000\n"
-"Last-Translator: ptfigueira <ptfigueira@gmail.com>\n"
+"PO-Revision-Date: 2014-05-20 22:00+0000\n"
+"Last-Translator: Lisias Loback <lisias@loback.co.uk>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/yv-backend/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,8 +47,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-24 11:23+0000\n"
-"Last-Translator: BadMix <vitor.msilva@gmail.com>\n"
+"PO-Revision-Date: 2014-05-23 01:00+0000\n"
+"Last-Translator: bcarneiro <barbara@wordrevolution.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/yv-backend/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -103,16 +105,16 @@ msgid "moment.bible.download.self.title"
 msgstr "Você descarregou a versão, <b>{version}</b>"
 
 msgid "moment.plan_subscription.title"
-msgstr "{name} começou um plano"
+msgstr "{name} começou um plano novo"
 
 msgid "moment.plan_subscription.self.title"
-msgstr "Começou um plano"
+msgstr "Começou um plano novo"
 
 msgid "moment.plan_segment_completion.title"
-msgstr "{name} completou o dia <b>{segment}</b> do plano, <b>{title}</b>"
+msgstr "{name} completou o dia <b>{segment}</b> do plano: <b>{title}</b>"
 
 msgid "moment.plan_segment_completion.self.title"
-msgstr "Completou o dia <b>{segment}</b> do plano, <b>{title}</b>"
+msgstr "Completou o dia <b>{segment}</b> do plano: <b>{title}</b>"
 
 msgid "moment.plan_segment_completion.body"
 msgstr "Dia {segment} de {total_segments} ({percent_complete}%)"
@@ -121,7 +123,7 @@ msgid "moment.plan_completion.title"
 msgstr "{name} completou um plano"
 
 msgid "moment.plan_completion.self.title"
-msgstr "Completou um plano"
+msgstr "Completou o seu plano"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} ganhou a medalha <b>{title}</b>"
@@ -134,6 +136,9 @@ msgstr "{name} viu <b>{title}</b>"
 
 msgid "moment.video.watched.self.title"
 msgstr "Você viu <b>{title}</b>"
+
+msgid "moment.system.find_friends.title"
+msgstr "A App da Bíblia é melhor quando partilhada com amigos. Faça uma pesquisa nos seus contactos para encontrar amigos. "
 
 msgid "notifications.friendships.offer"
 msgstr "{name} deseja ser seu amigo/a no YouVersion"
@@ -153,6 +158,15 @@ msgstr "{name} comentou no seu marcador: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} comentou no seu destaque: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} comentou no teu plano: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} comentou no teu plano da Bíblia: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} comentou na sua nova amizade com {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} comentou na sua nota: “{comment}”"
 
@@ -161,6 +175,15 @@ msgstr "{name} gosta do seu marcador, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} gosta do seu destaque, {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} gosta da atividade no teu plano"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} gosta da atividade no teu plano da Bíblia"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} gosta da sua nova amizade com {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} gosta da sua nota sobre {reference_human}"
@@ -177,11 +200,29 @@ msgstr "{moment_owner_name} também comentou no seu marcador: “{comment}”"
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} também comentou no marcador de {moment_owner_name}: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} também comentou na sua nova amizade com {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} também comentou na nova amizade de {moment_owner_name} com {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} também comentou no seu destaque: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} também comentou no destaque de {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} também comentou no seu plano: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} também comentou no plano de {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} também comentou no seu plano da Bíblia: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} também comentou no plano da Bíblia de {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} também comentou na sua nota: “{comment}”"
@@ -203,6 +244,18 @@ msgstr "{name} adicionou uma nota, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} adicionou uma nota"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} começou um plano novo: {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} começou um plano da Bíblia novo: {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} completou o seu plano: {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} completou o seu plano da Bíblia: {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
