--- a/config/locales/po/ro/api.po
+++ b/config/locales/po/ro/api.po
@@ -4,6 +4,7 @@
 # Translators:
 # Translators:
 # Translators:
+# Corina Teodorescu <corinasmile@gmail.com>, 2014
 # Cristian Cotovan <cristi.cotovan@gmail.com>, 2013
 # Dragoslav <drsek2@gmail.com>, 2014
 # Nick Negoita <ncnego@gmail.com>, 2013-2014
@@ -13,6 +14,7 @@
 # Translators:
 # Translators:
 # Translators:
+# Corina Teodorescu <corinasmile@gmail.com>, 2014
 # Dragoslav <drsek2@gmail.com>, 2013
 # Nick Negoita <ncnego@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
@@ -30,8 +32,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-04 08:00+0000\n"
-"Last-Translator: Dragoslav <drsek2@gmail.com>\n"
+"PO-Revision-Date: 2014-05-20 20:27+0000\n"
+"Last-Translator: Nick Negoita <ncnego@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/projects/p/yv-backend/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -42,7 +44,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-22 00:10+0000\n"
+"PO-Revision-Date: 2014-05-20 20:42+0000\n"
 "Last-Translator: Nick Negoita <ncnego@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/projects/p/yv-backend/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -132,6 +134,9 @@ msgstr "{name} a urmărit <b>{title}</b>"
 msgid "moment.video.watched.self.title"
 msgstr "Ai urmărit <b>{title}</b>"
 
+msgid "moment.system.find_friends.title"
+msgstr "Aplicația Biblia este chiar mai bună cu Prieteni. Caută în Contactele tale pentru a găsi Prieteni."
+
 msgid "notifications.friendships.offer"
 msgstr "{name} vrea să fie prietenul tău pe YouVersion"
 
@@ -150,6 +155,15 @@ msgstr "{name} a comentat la marcajul tău: „{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} a comentat la evidențierea ta: „{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} a comentat asupra planului tău: „{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} a comentat asupra planului tău biblic: „{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} a comentat asupra prieteniei tale cu {friend_name}: „{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} a comentat la notița ta: „{comment}”"
 
@@ -158,6 +172,15 @@ msgstr "{name} apreciază marcajul tău, {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} apreciază evidențiere ta, {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} apreciază activitatea din planurile tale"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} apreciază activitatea din planurile tale biblice"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} apreciază prietenia ta cu {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} apreciază notița ta despre {reference_human}"
@@ -174,11 +197,29 @@ msgstr "{moment_owner_name} a comentat de asemenea la marcajul său: „{comment
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} a comentat de asemenea la marcajul lui {moment_owner_name}: „{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} a comentat de asemenea asupra noii prietenii cu {friend_name}: „{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} a comentat de asemenea asupra prieteniei lui {moment_owner_name} cu {friend_name}: „{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} a comentat de asemenea la evidențierea lor: „{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} a comentat de asemenea la evidențierea lui {moment_owner_name}: „{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} a comentat de asemenea asupra planului său: „{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} a comentat de asemenea asupra planului lui {moment_owner_name}: „{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} a comentat de asemenea asupra planului său biblic: „{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} a comentat de asemenea asupra planului biblic al lui {moment_owner_name}: „{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} a comentat de asemenea la notița lor: „{comment}”"
@@ -200,6 +241,18 @@ msgstr "{name} a adăugat o notiță, „{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} a adăugat o notiță"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} a început un nou plan, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} a început un nou plan biblic, {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} și-a completat planul, {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} și-a completat planul biblic, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
