--- a/config/locales/po/vi/api.po
+++ b/config/locales/po/vi/api.po
@@ -27,7 +27,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-04 15:10+0000\n"
+"PO-Revision-Date: 2014-05-21 15:02+0000\n"
 "Last-Translator: Tien Luu <tienluu1024@yahoo.com>\n"
 "Language-Team: Vietnamese (http://www.transifex.com/projects/p/yv-backend/language/vi/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-24 11:23+0000\n"
+"PO-Revision-Date: 2014-05-21 15:12+0000\n"
 "Last-Translator: Tien Luu <tienluu1024@yahoo.com>\n"
 "Language-Team: Vietnamese (http://www.transifex.com/projects/p/yv-backend/language/vi/)\n"
 "MIME-Version: 1.0\n"
@@ -97,16 +97,16 @@ msgid "moment.bible.download.self.title"
 msgstr "Bạn tải xuống bản dịch <b>{version}</b>"
 
 msgid "moment.plan_subscription.title"
-msgstr "{name} bắt đầu một kế hoạch"
+msgstr "{name} bắt đầu một kế hoạch mới"
 
 msgid "moment.plan_subscription.self.title"
-msgstr "Đã bắt đầu một kế hoạch"
+msgstr "Bắt đầu một kế hoạch mới"
 
 msgid "moment.plan_segment_completion.title"
-msgstr "{name} hoàn tất ngày <b>{segment}</b> của kế hoạch <b>\"{title}\"</b>"
+msgstr "{name} hoàn tất ngày <b>{segment}</b> của kế hoạch <b>{title}</b>"
 
 msgid "moment.plan_segment_completion.self.title"
-msgstr "Bạn đã hoàn tất ngày <b>{segment}</b> của kế hoạch <b>\"{title}\"</b>"
+msgstr "Bạn đã hoàn tất ngày <b>{segment}</b> của kế hoạch <b>{title}</b>"
 
 msgid "moment.plan_segment_completion.body"
 msgstr "Ngày {segment} trong {total_segments} ({percent_complete}%)"
@@ -115,7 +115,7 @@ msgid "moment.plan_completion.title"
 msgstr "{name} hoàn tất một kế hoạch"
 
 msgid "moment.plan_completion.self.title"
-msgstr "Đã hoàn tất một kế hoạch"
+msgstr "Bạn đã hoàn tất kế hoạch"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} đạt huy hiệu <b>\"{title}\"</b>"
@@ -128,6 +128,9 @@ msgstr "{name} xem <b>\"{title}\"</b>"
 
 msgid "moment.video.watched.self.title"
 msgstr "Bạn xem <b>\"{title}\"</b>"
+
+msgid "moment.system.find_friends.title"
+msgstr "Hãy tìm bạn bè trong danh bạ của bạn để App Kinh Thánh càng trở nên thú vị hơn!"
 
 msgid "notifications.friendships.offer"
 msgstr "{name} muốn kết bạn với bạn trên YouVersion"
@@ -147,6 +150,15 @@ msgstr "{name} bình luận về đánh dấu của bạn: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} bình luận về tô màu của bạn: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} bình luận về kế hoạch của bạn: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} bình luận về kế hoạch đọc Kinh Thánh của bạn: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} bình luận về việc kết bạn với {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} bình luận về ghi chú của bạn: “{comment}”"
 
@@ -155,6 +167,15 @@ msgstr "{name} thích đánh dấu {reference_human} của bạn"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} thích tô màu {reference_human} của bạn"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} thích hoạt động của bạn"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} thích hoạt động đọc Kinh Thánh của bạn"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} thích việc kết bạn với {friend_name}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} thích ghi chú của bạn về {reference_human}"
@@ -171,11 +192,29 @@ msgstr "{moment_owner_name} bình luận về đánh dấu của bạn ấy: “
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} bình luận về đánh dấu của {moment_owner_name}: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} cũng bình luận về việc kết bạn với {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} cũng bình luận về việc kết bạn giữa {moment_owner_name} và {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} bình luận về tô màu của bạn ấy: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} bình luận về tô màu của {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} cũng bình luận về kế hoạch của bạn ấy: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} cũng bình luận về kế hoạch của {moment_owner_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} cũng bình luận về kế hoạch đọc Kinh Thánh của bạn ấy: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} cũng bình luận về kế hoạch đọc Kinh Thánh của {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} bình luận về ghi chú của bạn ấy: “{comment}”"
@@ -197,6 +236,18 @@ msgstr "{name} tạo ghi chú “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} tạo một ghi chú"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} bắt đầu kế hoạch \"{title}\""
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} bắt đầu kế hoạch đọc Kinh Thánh \"{title}\""
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} hoàn tất kế hoạch \"{title}\""
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} hoàn tất kế hoạch đọc Kinh Thánh \"{title}\""
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
