--- a/config/locales/po/zh_CN/api.po
+++ b/config/locales/po/zh_CN/api.po
@@ -6,7 +6,7 @@
 # Translators:
 # Gladys Liew <gladysliew@gmail.com>, 2014
 # jerry cheng <jerrych@gmail.com>, 2014
-# Joe Jiang <lamp.purl@gmail.com>, 2013
+# Joe Jiang <lamp.purl@gmail.com>, 2013-2014
 # Nianlan Yang <Nianlan@hotmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -16,7 +16,7 @@
 # Translators:
 # Gladys Liew <gladysliew@gmail.com>, 2014
 # jerry cheng <jerrych@gmail.com>, 2014
-# Joe Jiang <lamp.purl@gmail.com>, 2013
+# Joe Jiang <lamp.purl@gmail.com>, 2013-2014
 # Nianlan Yang <Nianlan@hotmail.com>, 2013
 # yushengyan2004 <yushengyan2004@gmail.com>, 2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
@@ -38,8 +38,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-04-10 07:30+0000\n"
-"Last-Translator: Gladys Liew <gladysliew@gmail.com>\n"
+"PO-Revision-Date: 2014-05-21 04:11+0000\n"
+"Last-Translator: Joe Jiang <lamp.purl@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/yv-backend/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +50,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-24 11:23+0000\n"
-"Last-Translator: yushengyan2004 <yushengyan2004@gmail.com>\n"
+"PO-Revision-Date: 2014-05-23 00:06+0000\n"
+"Last-Translator: Joe Jiang <lamp.purl@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/yv-backend/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -111,13 +111,13 @@ msgid "moment.plan_subscription.title"
 msgstr "{name} 开始一个读经计划"
 
 msgid "moment.plan_subscription.self.title"
-msgstr "开始一个读经计划"
+msgstr "你开始了一个读经计划"
 
 msgid "moment.plan_segment_completion.title"
 msgstr "{name} 完成了读经计划，<b>{title}</b>的第 <b>{segment}</b> 天 "
 
 msgid "moment.plan_segment_completion.self.title"
-msgstr "您完成了读经计划，<b>{title}</b>的第 <b>{segment}</b> 天"
+msgstr "您完成了读经计划 <b>{title}</b>的第 <b>{segment}</b> 天"
 
 msgid "moment.plan_segment_completion.body"
 msgstr "{total_segments} 中的第 {segment} 天 ({percent_complete}%)"
@@ -126,7 +126,7 @@ msgid "moment.plan_completion.title"
 msgstr "{name} 完成一个读经计划"
 
 msgid "moment.plan_completion.self.title"
-msgstr "完成一个读经计划"
+msgstr "你完成了一个读经计划"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} 获得了 <b>{title}</b> 勋章"
@@ -139,6 +139,9 @@ msgstr "{name} 看了 <b>{title}</b>"
 
 msgid "moment.video.watched.self.title"
 msgstr "你观看了 <b>{title}</b>"
+
+msgid "moment.system.find_friends.title"
+msgstr "圣经 App 现在与朋友一起使用更有效。请您在联系人中发现朋友，一起开始美好体验。"
 
 msgid "notifications.friendships.offer"
 msgstr "{name} 希望成为你在 YouVersion 的好友"
@@ -158,6 +161,15 @@ msgstr "{name} 评论了你的书签: “{comment}”"
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} 评论了你的高亮经文: “{comment}”"
 
+msgid "notifications.comments.moment.mine.plan_activity"
+msgstr "{name} 评论了您的计划: “{comment}”"
+
+msgid "notifications.comments.moment.mine.plan_activity.push"
+msgstr "{name} 评论了您的读经计划: “{comment}”"
+
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} 对于您和 {friend_name} 新建立的友谊进行了评论: “{comment}”"
+
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} 评论了笔记: “{comment}”"
 
@@ -166,6 +178,15 @@ msgstr "{name} 喜欢您的书签 {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} 喜欢您高亮显示的经文 {reference_human}"
+
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} 赞了您读经计划的行动"
+
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} 赞了您读经计划的行动"
+
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} 赞了您和 {friend_name} 的新友谊"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} 喜欢您的关于 {reference_human}的笔记"
@@ -182,11 +203,29 @@ msgstr "{moment_owner_name} 也评论了他们的书签标记: “{comment}”"
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} 也评论了 {moment_owner_name} 的书签标记: “{comment}”"
 
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} 也评论了和 {friend_name} 新建立的友谊: “{comment}”"
+
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} 也评论了 {moment_owner_name} 和 {friend_name} 的新友谊: “{comment}”"
+
 msgid "notifications.comments.moments.friend.owner.highlight"
 msgstr "{moment_owner_name} 也评论了他们的高亮标记: “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
 msgstr "{commenter_name} 也评论了 {moment_owner_name} 的高亮标记: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} 也评论了他们的计划: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} 也评论了 {moment_owner_name} 的计划: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} 也评论了他们的计划: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} 也评论了 {moment_owner_name} 的读经计划: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
 msgstr "{moment_owner_name} 也评论了他们的笔记: “{comment}”"
@@ -208,6 +247,18 @@ msgstr "{name} 加了一条笔记, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
 msgstr "{name} 添加了一条笔记"
+
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} 开始了一个新计划, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} 开始了一个新的读经计划, {title}"
+
+msgid "notifications.moments.create.plan_completion"
+msgstr "{name} 结束了他们的新计划, {title}"
+
+msgid "notifications.moments.create.plan_completion.push"
+msgstr "{name} 结束了他们的读经计划, {title}"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
